Task7/gatekeeper/constraint-template-hostpath.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsphostpath
spec:
  crd:
    spec:
      names:
        kind: K8sPSPHostPath
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8spsphostpath

      violation[{"msg": msg}] {
        v := input.review.object.spec.volumes[_]
        v.hostPath
        msg := sprintf("HostPath volume not allowed: %v", [v.name])
      }
