Task7/gatekeeper/constraint-template-runasroot.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsprunasnonroot
spec:
  crd:
    spec:
      names:
        kind: K8sPSPRunAsNonRoot
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8spsprunasnonroot

      violation[{"msg": msg}] {
        c := input.review.object.spec.containers[_]
        c.securityContext.runAsUser == 0
        msg := sprintf("Container must not run as root: %v", [c.name])
      }

      violation[{"msg": msg}] {
        not input.review.object.spec.securityContext.runAsNonRoot
        msg := "Pod must set runAsNonRoot: true"
      }
