Task7/gatekeeper/constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivileged
metadata:
  name: deny-privileged
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    namespaces: ["app-prod", "app-dev"]
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPRunAsNonRoot
metadata:
  name: require-non-root
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    namespaces: ["app-prod", "app-dev"]
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostPath
metadata:
  name: deny-hostpath
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    namespaces: ["app-prod", "app-dev"]
